# minecrap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  imgui.ini  readme.md
.cache/clangd/index/: main.cpp.D80A1A03669ABA0F.idx  pch.cpp.AAEA5011D03BF489.idx  pch.h.12894FED77E660EA.idx
assets/: blocks.json
assets/shaders/: chunk.frag.glsl  chunk.vert.glsl  world.frag.glsl  world.vert.glsl
resources/shaders/: basic.frag.glsl  basic.vert.glsl
src/: blocks.cpp  blocks.h  camera.cpp  camera.h  chunk.cpp  chunk.h  input.cpp  input.h  main.cpp  pch.h  shader.cpp  shader.h  texture.cpp  texture.h  world.cpp  world.h
src/gfx/: shader.cpp  shader.h  texture.cpp  texture.h
src/util/: camera.h  input.cpp  input.h
src/world/: blocks.cpp  blocks.h  chunk.cpp  world.h
